--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # Aplicação Laravel (PHP-FPM)
+  # Laravel Application (PHP-FPM)
   app:
     build:
       context: .
@@ -35,7 +35,7 @@ services:
     networks:
       - star-wars-network
 
-  # Servidor Web Nginx
+  # Nginx Web Server
   nginx:
     image: nginx:alpine
     container_name: star-wars-nginx
@@ -52,7 +52,7 @@ services:
     networks:
       - star-wars-network
 
-  # Banco de dados MySQL
+  # MySQL Database
   mysql:
     image: mysql:8.0
     container_name: star-wars-mysql
@@ -77,7 +77,7 @@ services:
       timeout: 5s
       retries: 5
 
-  # Redis (Cache e Fila)
+  # Redis (Cache & Queue)
   redis:
     image: redis:7-alpine
     container_name: star-wars-redis
